# Vegvisir-harness

./: .gitignore  Cargo.toml  NOTICE  README.md  THIRD_PARTY_NOTICES.md  implementation_plan.md  install.sh  op-veg.md  plan.md  skillssys.md  uninstall.sh  upgrade.sh
components/HBSE/hbse/: Cargo.toml
components/HBSE/hbse/src/: audit.rs  backup.rs  broker_daemon.rs  crypto.rs  dotenv.rs  keys.rs  lib.rs  main.rs  mfa.rs  policy.rs  provider.rs  provider_catalog.rs  provider_system.rs  provider_tpm2.rs  provider_tpm2_esapi.rs  provider_yubikey.rs  records.rs  recovery.rs  redaction.rs  release.rs  rotation.rs  serialization.rs  store.rs  systemd.rs  tickets.rs  vault.rs
components/binary-intelligence-workbench/: IMPLEMENTATION_PLAN.md  README.md  SECURITY.md  biw-cli  pyproject.toml
components/binary-intelligence-workbench/biw/: agent.py  cli.py  core.py  diff.py  explain.py  firmware.py  ghidra.py  heuristics.py  index.py  memory.py  report.py  server.py  skill.py
components/binary-intelligence-workbench/docs/: agent-workflows.md  architecture.md  binary-diffing.md  case-file-schema.md  cms-memory-model.md  firmware-analysis.md  quickstart.md  solarium-ui.md
components/binary-intelligence-workbench/samples/cct-crypto1/: crypto1a_flag.txt  crypto1b_flag.txt
components/binary-intelligence-workbench/samples/cct3/: cipher.txt  flag.txt
components/binary-intelligence-workbench/samples/htb-callfuscated/: crackme
components/binary-intelligence-workbench/samples/htb-red/: http_payload_obf.sh  lhJVXukWibAFfkv_decoded.sh  module_focus.disasm  redis_module.disasm  stream6_raw.txt  x7KG0bvubT6dID2_decoded.sh
components/binary-intelligence-workbench/samples/htb-wonky-aes/: solve_wonky_aes.py
components/binary-intelligence-workbench/samples/thm-pcap1/: icmp_chat.tsv  key_candidates.txt  png_frames.tsv  stream49_client_hex.txt  tf_test  tf_test.c  try_tf_variants.py  twofish_decrypt_blocks  twofish_decrypt_blocks.c
components/binary-intelligence-workbench/skiller-bundles/artifact-intelligence/: README.md  bundle.toml  package.yaml
components/binary-intelligence-workbench/skiller-bundles/binary-analysis/: bundle.toml
components/binary-intelligence-workbench/solarium/binary-workbench/: index.html  package.json
components/binary-intelligence-workbench/tests/: test_cli.py
components/binary-intelligence-workbench/writeups/html/: callfuscated.html  index.html  red.html  spooky.html  wonky-aes.html
components/cms-v2/: Cargo.toml
components/cms-v2/examples/: embed_cms.rs  prepare_cached_prompt.rs  vegvisir_agent_runtime.rs
components/cms-v2/memories/: cms_hybrid_architecture.lml  usrl_canonical_reference.lml
components/cms-v2/src/: archive.rs  cms_api.rs  cms_runtime.rs  core.rs  data_import.rs  diagnostics.rs  ecm.rs  graph.rs  lib.rs  lml.rs  maintenance.rs  prompt_cache.rs  provider_contracts.rs  rag.rs  safety.rs  sqlite.rs  usrl.rs  vectors.rs
components/cms-v2/tests/: lml_sqlite.rs
components/desktop/src-tauri/: Cargo.toml  tauri.conf.json
components/desktop/src-tauri/src/: main.rs
components/skiller/: .gitignore  Cargo.toml  README.md
components/skiller/examples/api/: payments-openapi.yaml
components/skiller/examples/cli/: cachectl-help.txt  deployctl.yaml
components/skiller/src/: corpus.rs  lib.rs  main.rs  models.rs  review.rs  source_meta.rs
components/skiller/src/agents/: mod.rs
components/skiller/src/compiler/: mod.rs
components/skiller/src/domain/: mod.rs
components/skiller/src/evidence/: mod.rs
components/skiller/src/forge/: mod.rs
components/skiller/src/ingest/: mod.rs
components/skiller/src/registry/: mod.rs
components/skiller/src/runtime/: mod.rs
components/skiller/tests/: rust_compile.rs  rust_interface_compile.rs  rust_workflow.rs
vegvisir/: .gitignore  Cargo.toml
vegvisir/packaging/: README.md  install.sh  package-system.sh  uninstall.sh
vegvisir/src/: app.rs  attachments.rs  bridge.rs  checkpoints.rs  command_registry.rs  command_sandbox.rs  compat_server.rs  context.rs  core.rs  environment.rs  evals.rs  guardrails.rs  hooks.rs  lib.rs  lsl.rs  main.rs  mcp.rs  memory.rs  model.rs  model_discovery.rs  observability.rs  openai_sso.rs  orchestrator.rs  parallelism.rs  persona.rs  planning.rs  policy.rs  profile.rs  prompts.rs  provider.rs  retrieval.rs  runtime.rs  sandbox.rs  setup.rs  speech.rs  state.rs  subagents.rs  telemetry.rs  tools.rs  tui2.rs  (+3 more)
vegvisir/src/app/: input.rs  lsl_runtime.rs  runtime.rs  shell.rs  tui_loop.rs  util.rs  workspace_state.rs
vegvisir/src/defaults/: default_system_prompt.md  evals.json  example_cryptography.lsl  models.json  providers.json  skills.json  tools.json
vegvisir/tests/: port_smoke.rs
(+388 files in other folders)
