[package]
name = "vegvisir-rust"
version = "0.1.0"
edition = "2024"
description = "Vegvisir Agent Harness"
license = "MIT"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
cms-v2 = { path = "../components/cms-v2" }
crossterm = "0.28"
pulldown-cmark = "0.13"
regex = "1"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tiny_http = "0.12"
unicode-width = "0.2"
ureq = { version = "2", features = ["json"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
