[package]
name = "cms-v2"
version = "0.1.0"
edition = "2024"
description = "Hybrid Continuum Memory System v2"
license = "MIT"

[lib]
name = "cms_v2"
path = "src/lib.rs"

[[bin]]
name = "cms"
path = "src/bin/cms.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
uuid = { version = "1", features = ["v7", "serde"] }

[dev-dependencies]
tempfile = "3"
