[package]
name = "skiller"
version = "0.1.0"
edition = "2024"
description = "A governed Rust skill compiler and forge for turning technical sources into agent-ready skills."
license = "Apache-2.0"
repository = "https://github.com/HonorboundInnovation/skiller"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
libc = "0.2"
pulldown-cmark = "0.10"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "1"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
