[package]
name = "vegvisir-desktop"
version = "0.1.0"
description = "Desktop shell for the Vegvisir agentic development harness"
edition = "2021"
license = "MIT"


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[workspace]
